add 2023/10/19 patch to changelog

--- a/web/ja/environment/changelog/index.html
+++ b/web/ja/environment/changelog/index.html
@@ -33,6 +33,9 @@
         <div class="new">
           <h3>NEW</h3>
           <ul>
+            <li>DBFlute Engine: ReplaceSchema dropping no-name function on PostgreSQL #191 <span class="frm">*2023/10/19パッチ</span></li>
+            <li>DBFlute Engine: ReplaceSchema additionalDrop on MySQL #190 <span class="frm">*2023/10/19パッチ</span></li>
+            <li>DBFlute Engine: ReplaceSchema additionalDrop on PostgreSQL #189 <span class="frm">*2023/10/19パッチ</span></li>
             <li>DBFlute Engine: readOnlyTableNameList, make except-option case insensitive #185</li>
             <li>DBFlute Runtime: ConditionQuery invoking by extends option #183</li>
             <li>DBFlute Runtime: support for PGroonga basic operand #175</li>
