comment about MySQL-8.2 headache

--- a/web/ja/tutorial/handson/section01.html
+++ b/web/ja/tutorial/handson/section01.html
@@ -130,6 +130,9 @@
 		MySQLのオフィシャルサイトからローカル環境に対応する MySQL のインストーラー無し版(ZIPアーカイブ版など)をダウンロードし、localdb/mysql に配置します。
 		<span class="frm">(以下の配置であれば、MySQL本体は Git のコミット対象になりません。gitignore に登録されています。間違っても MySQL 本体を Git にコミットしないように)</span>
 	</p>
+	<p>
+		<span class="frm">※注意: MySQL-8.2 ではなく MySQL-8.0 でお願いします。ハンズオンのMySQLの設定ファイルが 8.2 だと動かないと報告がありました。</span>
+	</p>
 	<div class="detailpage"><a href="http://dev.mysql.com/downloads/mysql/">Official Site - MySQL Download</a></div>
 <pre><span class="codetitle">e.g. MySQLの配置場所 @Directory</span><code>
 PROJECT_ROOT
