remove DBFlute Slack

--- a/web/ja/manual/topic/office/feedback.html
+++ b/web/ja/manual/topic/office/feedback.html
@@ -40,7 +40,8 @@
 	<p>
 		DBFluteユーザの集いで投稿するときは、Google Group に入会をお願いします。
 	</p>
-	<div class="relatedpage"><a href="http://groups.google.co.jp/group/dbflute">DBFluteユーザの集い | Google Group</a></div>
+	<div class="relatedpage"><a href="https://groups.google.com/g/dbflute/">DBFluteユーザの集い | Google Group</a></div>
+	<!-- slack edition headache and heroku headache so...
 	<h3 id="dbfluteslack">チャット (DBFlute Slack)</h3>
 	<p>
 		気軽にチャットで質問や相談などができる <em class="mark">公開Slack</em> がありますので、ぜひご利用ください。
@@ -65,6 +66,7 @@
 	<p>
 		※仕組み的に <em class="keyword">誰でも閲覧できるチャット</em> になりますので、それを前提に投稿をお願いします。将来はチャットの内容をサイトで自動公開できるようにしたいとも考えています。ゆえに "公開Slack" と銘打っています。
 	</p>
+	 -->
 	<h3 id="twitter">Twitter (jflute)</h3>
 	<p>
 		Twitterでもフィードバックを受け付けています<span class="frm">(もしくは、TwitterでDBFluteについてつぶやいたら、何か反応させて頂くかもしれません)</span>。
