add isUseDropTableCascadeAsPossible to changelog

--- a/web/ja/environment/changelog/index.html
+++ b/web/ja/environment/changelog/index.html
@@ -33,6 +33,12 @@
         <div class="new">
           <h3>NEW</h3>
           <ul>
+            <li>DBFlute Engine: ReplaceSchema, isUseDropTableCascadeAsPossible (basically) for PostgreSQL #201 <span class="frm">*2024/02/25パッチ</span></li>
+            <li>DBFlute Engine: option to ignore VIEW's not null constraint differences #200 <span class="frm">*2024/02/25パッチ</span></li>
+            <li>DBFlute Engine: ReplaceSchema dropping view dependencies on PostgreSQL #196 <span class="frm">*2024/02/25パッチ</span></li>
+            <li>DBFlute Engine: FreeGen $manager needs currentJakartaPackage #195 <span class="frm">*2024/02/25パッチ</span></li>
+            <li>DBFlute Engine: SchemaSyncCheck quoting UPPER DB name on PostgreSQL #193 <span class="frm">*2024/02/25パッチ</span></li>
+            <li>DBFlute Engine: ReplaceSchema dropping overload functions on PostgreSQL #192 <span class="frm">*2024/02/25パッチ</span></li>
             <li>DBFlute Engine: ReplaceSchema dropping no-name function on PostgreSQL #191 <span class="frm">*2023/10/19パッチ</span></li>
             <li>DBFlute Engine: readOnlyTableNameList, make except-option case insensitive #185</li>
             <li>DBFlute Runtime: ConditionQuery invoking by extends option #183</li>
