--- a/web/ja/environment/changelog/index.html
+++ b/web/ja/environment/changelog/index.html
@@ -40,6 +40,8 @@
             <li>DBFlute Engine: SchemaSyncCheck quoting UPPER DB name on PostgreSQL #193 <span class="frm">*2024/02/25パッチ</span></li>
             <li>DBFlute Engine: ReplaceSchema dropping overload functions on PostgreSQL #192 <span class="frm">*2024/02/25パッチ</span></li>
             <li>DBFlute Engine: ReplaceSchema dropping no-name function on PostgreSQL #191 <span class="frm">*2023/10/19パッチ</span></li>
+            <li>DBFlute Engine: ReplaceSchema additionalDrop on MySQL #190 <span class="frm">*2023/10/19パッチ</span></li>
+            <li>DBFlute Engine: ReplaceSchema additionalDrop on PostgreSQL #189 <span class="frm">*2023/10/19パッチ</span></li>
             <li>DBFlute Engine: readOnlyTableNameList, make except-option case insensitive #185</li>
             <li>DBFlute Runtime: ConditionQuery invoking by extends option #183</li>
             <li>DBFlute Runtime: support for PGroonga basic operand #175</li>
