--- a/web/ja/environment/changelog/index.html
+++ b/web/ja/environment/changelog/index.html
@@ -28,6 +28,31 @@
 	${indexlist}
 
       <div class="release">
+        <h2>DBFlute-1.2.8 <span class="frm">※Java8</span></h2>
+        <p class="releasedate">2024/03/19</p>
+        <div class="new">
+          <h3>NEW</h3>
+          <ul>
+            <li>DBFlute Runtime: useInScopeSubQuery() of Compound PK #204</li>
+            <li>DBFlute Runtime: make FileToken new method removeUTF8Bom() #199</li>
+            <li>DBFlute Engine: ReplaceSchema, isUseDropTableCascadeAsPossible (basically) for PostgreSQL #201 <span class="frm">*前回パッチ</span></li>
+            <li>DBFlute Engine: option to ignore VIEW's not null constraint differences #200 <span class="frm">*前回パッチ</span></li>
+            <li>DBFlute Engine: ReplaceSchema dropping view dependencies on PostgreSQL #196 <span class="frm">*前回パッチ</span></li>
+            <li>DBFlute Engine: FreeGen $manager needs currentJakartaPackage #195 <span class="frm">*前回パッチ</span></li>
+            <li>DBFlute Engine: SchemaSyncCheck quoting UPPER DB name on PostgreSQL #193 <span class="frm">*前回パッチ</span></li>
+            <li>DBFlute Engine: ReplaceSchema dropping overload functions on PostgreSQL #192 <span class="frm">*前回パッチ</span></li>
+            <li>DBFlute Engine: ReplaceSchema dropping no-name function on PostgreSQL #191 <span class="frm">*前回パッチ</span></li>
+            <li>DBFlute Engine: ReplaceSchema additionalDrop on MySQL #190 <span class="frm">*前回パッチ</span></li>
+            <li>DBFlute Engine: ReplaceSchema additionalDrop on PostgreSQL #189 <span class="frm">*前回パッチ</span></li>
+          </ul>
+          <h3>BUG</h3>
+          <ul>
+            <li>DBFlute Engine: ReplaceSchema additionalDrop on MySQL #190 <span class="frm">*前回パッチ</span></li>
+            <li>DBFlute Engine: ReplaceSchema additionalDrop on PostgreSQL #189 <span class="frm">*前回パッチ</span></li>
+          </ul>
+        </div>
+      </div>
+      <div class="release">
         <h2>DBFlute-1.2.7 <span class="frm">※Java8</span></h2>
         <p class="releasedate">2023/10/11</p>
         <div class="new">
