--- a/web/index.ja.html
+++ b/web/index.ja.html
@@ -29,7 +29,8 @@
 		<div id="leftpart">
 			<h2>News</h2>
 			<ul>
-				<li><span class="date">2023/10/12</span><a href="https://jflute.hatenadiary.jp/entry/20231012/release127">DBFlute-1.2.7 (Java8対応)</a> をリリースしました。</li>
+				<li><span class="date">2024/03/19</span>DBFlute-1.2.8 (Java8対応) をリリースしました。</li>
+				<li><span class="date">2023/10/12</span>DBFlute-1.2.7 (Java8対応) をリリースしました。</li>
 				<li><span class="date">2022/05/08</span><a href="https://jflute.hatenadiary.jp/entry/20220508/release126">DBFlute-1.2.6 (Java8対応)</a> をリリースしました。</li>
 				<li><span class="date">2021/01/01</span><a href="https://jflute.hatenadiary.jp/entry/20210101/release124">DBFlute-1.2.4 (Java8対応)</a> をリリースしました。</li>
 				<li><span class="date">2020/01/01</span><a href="https://jflute.hatenadiary.jp/entry/20200101/release122">DBFlute-1.2.2 (Java8対応)</a> をリリースしました。</li>
@@ -39,8 +40,8 @@
 				<li><span class="date">2009/12/14</span><a href="http://dbflute.net.sandbox.seasar.org/">DBFlute.NETの仮のトップページ</a>を公開しました。</li>
 				<li>
 					<div class="inunews">
-					[jfluteのつぶやき] *2023/10/12<br />
-					DBFlute-1.2.7 をリリースしました: <a href="https://jflute.hatenadiary.jp/entry/20231012/release127">DBFlute-1.2.7 Released</a>
+					[jfluteのつぶやき] *2024/03/19<br />
+					DBFlute-1.2.8 をリリースしました！しばらく年1ペースのリリースでしたが、半年ぶりで良かったです。
 					</div>
 				</li>
 			</ul>
