--- a/web/index.ja.html
+++ b/web/index.ja.html
@@ -30,7 +30,7 @@
 			<h2>News</h2>
 			<ul>
 				<li><span class="date">2024/03/19</span>DBFlute-1.2.8 (Java8対応) をリリースしました。</li>
-				<li><span class="date">2023/10/12</span>DBFlute-1.2.7 (Java8対応) をリリースしました。</li>
+				<li><span class="date">2023/10/12</span><a href="https://jflute.hatenadiary.jp/entry/20240321/release127">DBFlute-1.2.7 (Java8対応)</a> をリリースしました。</li>
 				<li><span class="date">2022/05/08</span><a href="https://jflute.hatenadiary.jp/entry/20220508/release126">DBFlute-1.2.6 (Java8対応)</a> をリリースしました。</li>
 				<li><span class="date">2021/01/01</span><a href="https://jflute.hatenadiary.jp/entry/20210101/release124">DBFlute-1.2.4 (Java8対応)</a> をリリースしました。</li>
 				<li><span class="date">2020/01/01</span><a href="https://jflute.hatenadiary.jp/entry/20200101/release122">DBFlute-1.2.2 (Java8対応)</a> をリリースしました。</li>
