DBFlute Engine: LoadDataReverse, option of TSV (delimiter data) minimally quoted #205

--- a/web/ja/environment/changelog/index.html
+++ b/web/ja/environment/changelog/index.html
@@ -33,6 +33,7 @@
         <div class="new">
           <h3>NEW</h3>
           <ul>
+            <li>DBFlute Engine: LoadDataReverse, option of TSV (delimiter data) minimally quoted #205 <span class="frm">*2024/04/07パッチ</span></li>
             <li>DBFlute Runtime: useInScopeSubQuery() of Compound PK #204</li>
             <li>DBFlute Runtime: make FileToken new method removeUTF8Bom() #199</li>
             <li>DBFlute Engine: ReplaceSchema, isUseDropTableCascadeAsPossible (basically) for PostgreSQL #201 <span class="frm">*前回パッチ</span></li>
