--- a/web/ja/lastaflute/howto/upgrade/lachangelog.html
+++ b/web/ja/lastaflute/howto/upgrade/lachangelog.html
@@ -29,6 +29,16 @@
 	${indexlist}
 
       <div class="release">
+        <h2>LastaFlute-1.2.6</h2>
+        <p class="releas5date">2024/05/24</p>
+        <div class="new">
+          <h3>NEW</h3>
+          <ul>
+            <li>FormMappingOption's new method asUndefinedParameterWarning() #81</li>
+          </ul>
+        </div>
+      </div>
+      <div class="release">
         <h2>LastaFlute-1.2.5</h2>
         <p class="releas5date">2023/05/22</p>
         <div class="new">
