--- a/web/ja/lastaflute/howto/upgrade/lachangelog.html
+++ b/web/ja/lastaflute/howto/upgrade/lachangelog.html
@@ -29,6 +29,19 @@
 	${indexlist}
 
       <div class="release">
+        <h2>LastaFlute-1.2.7</h2>
+        <p class="releas5date">2024/06/30</p>
+        <div class="new">
+          <h3>NEW</h3>
+          <ul>
+            <li>upgrade Gson to 2.11.0</li>
+            <li>[Lasta Di] AOP works as possible even if java16 or later #37</li>
+            <li>[Lasta Di] upgrade Javassist to 3.30.2-GA</li>
+            <li>[Lasta RemoteApi] add compatible overload method of setupRequestInfo()</li>
+          </ul>
+        </div>
+      </div>
+      <div class="release">
         <h2>LastaFlute-1.2.6</h2>
         <p class="releas5date">2024/05/24</p>
         <div class="new">
