--- a/web/ja/environment/changelog/index.html
+++ b/web/ja/environment/changelog/index.html
@@ -33,6 +33,9 @@
         <div class="new">
           <h3>NEW</h3>
           <ul>
+            <li>DBFlute Engine: improve Final Message to show JDBC driver version #211 <span class="frm">*2024/07/25パッチ</span></li>
+            <li>DBFlute Engine: non-SQLException handling for Procedure meta data #209 <span class="frm">*2024/07/25パッチ</span></li>
+            <li>DBFlute Engine: Sql2Entity procedure error on mysql-8.0.x and jdbc-8.0.x #208 <span class="frm">*2024/07/25パッチ</span></li>
             <li>DBFlute Engine: LoadDataReverse, option of TSV (delimiter data) minimally quoted #205 <span class="frm">*2024/04/07パッチ</span></li>
             <li>DBFlute Runtime: useInScopeSubQuery() of Compound PK #204</li>
             <li>DBFlute Runtime: make FileToken new method removeUTF8Bom() #199</li>
