--- a/web/ja/manual/function/helper/erflute/howto.html
+++ b/web/ja/manual/function/helper/erflute/howto.html
@@ -321,6 +321,18 @@
     &lt;/trigger_set&gt;
 &lt;/diagram&gt;
 </code></pre>
+
+	<div class="inucolumn">
+		<h2 id="tsumiagemerge">積み上げマージの極意</h2>
+		<p>
+			複数人でERFluteでermファイルを修正したとき、基本的には自動マージされます。
+			ですが、時々アルファベット順的にテーブル名が近いテーブルを互いに追加したときに、空間的なコンフリクトが発生することがあります。
+		</p>
+		<p>
+			そのときは積み上げマージをしましょう。
+		</p>
+		<div class="detailpage"><a href="https://jflute.hatenadiary.jp/entry/20240727/gittsumiage">gitコンフリクト、両方残す積み上げマージ | jfluteの日記</a></div>
+	</div>
 <!-- __content-end__ --></div></div>
 
 <div id="sidebar">
