making jakarta pages

--- a/web/ja/lastaflute/howto/upgrade/index.html
+++ b/web/ja/lastaflute/howto/upgrade/index.html
@@ -31,7 +31,13 @@
 	<div class="relatedpage"><a href="../../index.html">LastaFlute</a></div>
 	${indexlist}
 
-	<h2 id="newest">最新バージョンの情報</h2>
+	<h2 id="jakarta">Jakarta版の最新バージョンの情報</h2>
+	<p>
+		Java21コンパイルのJakarta対応バージョンは別のページにて紹介しています。
+	</p>
+	<div class="detailpage"><a href="./lakarta.html">LastaFluteのJakarta対応 (Java21) | Github</a></div>
+
+	<h2 id="newest">Java8版の最新バージョンの情報</h2>
 	<h3 id="lastaver">LastaFluteの最新バージョン</h3>
 	<p>
 		LastaFluteの最新バージョン (最新版) の情報です。
