--- a/web/ja/lastaflute/howto/upgrade/lakarta.html
+++ b/web/ja/lastaflute/howto/upgrade/lakarta.html
@@ -194,6 +194,10 @@
 	<div class="relatedpage"><a href="https://github.com/lastaflute/lastaflute-test-fortress/blob/javax21/pom.xml#L498">lastaflute-example-harbor - jaxb | Github</a></div>
 
 	<h2 id="java8to21">そもそもJava8からJava21の移行</h2>
+	<p>
+		Jakarta対応関係なく、アプリの環境をJava8からJava21にアップグレードすることによる影響がありますので、その代表的なものを列挙しておきます。
+		<span class="frm">(Jakarta対応せずに、Java8版のLastaFluteをJava21環境で動かす場合もこちらが必要です)</span>
+	</p>
 	<h3 id="addedannotation">@Resourceを追加</h3>
 	<p>
 		Java9より、@Resourceアノテーションを提供している javax.annotation
