--- a/web/ja/lastaflute/howto/upgrade/lakarta.html
+++ b/web/ja/lastaflute/howto/upgrade/lakarta.html
@@ -25,7 +25,7 @@
 
 <div id="content"><!-- __content-start__ -->
 	<h1>LastaFluteのJakarta対応 (Java21)</h1>
-	<div class="relatedpage"><a href="../index.html">LastaFluteトップページ</a></div>
+	<div class="relatedpage"><a href="../../index.html">LastaFluteトップページ</a></div>
 	<p>
 		Jakarta対応しました。(Java21コンパイル、Tomcat10対応、Servlet6対応)
 	</p>
@@ -255,7 +255,7 @@
 	<p>
 		一応、専用のページあります。
 	</p>
-	<div class="relatedpage"><a href="../../../tutorial/dbkarta.html">DBFlute on Jakarta</a></div>
+	<div class="relatedpage"><a href="../../../tutorial/dbkarta.html">DBFlute with Jakarta</a></div>
 
 	<h2 id="freegen">FreeGenのFluteたちは？</h2>
 	<p>
