--- a/web/ja/lastaflute/howto/upgrade/lakarta.html
+++ b/web/ja/lastaflute/howto/upgrade/lakarta.html
@@ -65,7 +65,7 @@
 		<dt><a href="../architecture/remoteapicall.html">Lasta RemoteApi</a></dt><dd>2.0.0 <span class="frm">(2024/08/21)</span></dd>
 		<dt><a href="https://github.com/lastaflute/lasta-meta/">Lasta Meta</a></dt><dd>2.0.0 <span class="frm">(2024/08/21)</span></dd>
 		<dt><a href="https://github.com/lastaflute/lasta-taglib/">Lasta Taglib</a></dt><dd>2.0.0 <span class="frm">(2024/08/21)</span></dd>
-		<dt><a href="https://github.com/dbflute-session/jetty-boot/">JettyBoot</a></dt><dd>2.0.0 <span class="frm">(2024/08/21)</span></dd>
+		<dt><a href="https://github.com/dbflute-session/jetty-boot/">JettyBoot</a></dt><dd><del>2.0.0</del> <span class="frm">(まだ)</span></dd>
 		<dt><a href="https://github.com/dbflute-session/tomcat-boot/">TomcatBoot</a></dt><dd>2.0.0 <span class="frm">(2024/08/21)</span></dd>
 		<dt><a href="../../../manual/function/helper/utflute/index.html">UTFlute</a></dt><dd>2.0.0 <span class="frm">(2024/08/21)</span></dd>
 	</dl>
