introduce Jakarta LastaFlute blog

--- a/web/index.ja.html
+++ b/web/index.ja.html
@@ -40,8 +40,9 @@
 				<li><span class="date">2009/12/14</span><a href="http://dbflute.net.sandbox.seasar.org/">DBFlute.NETの仮のトップページ</a>を公開しました。</li>
 				<li>
 					<div class="inunews">
-					[jfluteのつぶやき] *2024/03/19<br />
-					DBFlute-1.2.8 をリリースしました！しばらく年1ペースのリリースでしたが、半年ぶりで良かったです。
+					[jfluteのつぶやき] *2024/08/22<br />
+					DBFluteじゃないですが、LastaFluteのJakarta対応をリリースしました！<br />
+					<a href="https://jflute.hatenadiary.jp/entry/20240821/jakartalasta">Jakarta対応したLastaFluteをリリース</a>
 					</div>
 				</li>
 			</ul>
