small fix: basic grammer

--- a/web/ja/lastaflute/howto/upgrade/lakarta.html
+++ b/web/ja/lastaflute/howto/upgrade/lakarta.html
@@ -33,7 +33,7 @@
 
 	<h2 id="aboutjakarta">そもそもJakarta対応とは？</h2>
 	<p>
-		Java標準のフレームワークであって JavaEE が、オープンソースコミュニティ Eclipse Foundation に寄贈され、JakartaEE というオープンソースとして生まれ変わりました。
+		Java標準のフレームワークであった JavaEE が、オープンソースコミュニティ Eclipse Foundation に寄贈され、JakartaEE というオープンソースとして生まれ変わりました。
 	</p>
 	<p>
 		その際、javax.始まりのパッケージが、jakarta.始まりのパッケージに変わるなど、利用者が意識せざるを得ない修正が入りました。
