--- a/web/ja/environment/changelog/index.html
+++ b/web/ja/environment/changelog/index.html
@@ -33,6 +33,9 @@
         <div class="new">
           <h3>NEW</h3>
           <ul>
+            <li>DBFlute Engine: LoadDataReverse, support sectionTableGuidelineLimit #216 <span class="frm">*2024/10/06パッチ</span></li>
+            <li>DBFlute Engine: LoadDataReverse's isOverrideExistingDataFile for TSV #213 <span class="frm">*2024/10/06パッチ</span></li>
+            <li>DBFlute Engine: LoadDataReverse's isDelimiterDataBasis #214 <span class="frm">*2024/10/06パッチ</span></li>
             <li>DBFlute Engine: improve Final Message to show JDBC driver version #211 <span class="frm">*2024/07/25パッチ</span></li>
             <li>DBFlute Engine: non-SQLException handling for Procedure meta data #209 <span class="frm">*2024/07/25パッチ</span></li>
             <li>DBFlute Engine: Sql2Entity procedure error on mysql-8.0.x and jdbc-8.0.x #208 <span class="frm">*2024/07/25パッチ</span></li>
