add additionalDbComment, $$schema$$

--- a/web/ja/environment/changelog/index.html
+++ b/web/ja/environment/changelog/index.html
@@ -33,6 +33,7 @@
         <div class="new">
           <h3>NEW</h3>
           <ul>
+            <li>DBFlute Engine: additionalDbComment, $$schema$$ #219 <span class="frm">*2024/10/12パッチ</span></li>
             <li>DBFlute Engine: additionalDbCommentMap.dfprop #218 <span class="frm">*2024/10/11パッチ</span></li>
             <li>DBFlute Engine: LoadDataReverse, support sectionTableGuidelineLimit #216 <span class="frm">*2024/10/06パッチ</span></li>
             <li>DBFlute Engine: LoadDataReverse's isOverrideExistingDataFile for TSV #213 <span class="frm">*2024/10/06パッチ</span></li>
