--- a/web/ja/manual/topic/friends/index.html
+++ b/web/ja/manual/topic/friends/index.html
@@ -34,6 +34,7 @@
 	<ul>
 		<li><a href="./eclipse/index.html">Eclipse</a></li>
 		<li><a href="./intellij/index.html">IntelliJ</a></li>
+		<li><a href="./vscode/index.html">VSCode</a></li>
 		<li><a href="./javascript/riotjs/index.html">riot.js</a></li>
 		<li><a href="./fess/fesslasta.html">Fess</a></li>
 		<li><a href="./maven/index.html">Maven</a></li>
