--- a/web/ja/manual/topic/friends/vscode/index.html
+++ b/web/ja/manual/topic/friends/vscode/index.html
@@ -37,6 +37,10 @@
 	</p>
 
 	<h2 id="shareformatter">フォーマッター設定の共有</h2>
+	<h3 id="witheclipse">Eclipseの設定に合わせる</h3>
+	<p>
+		とりあえずこれで、ほぼEclipseと同じ感じになった。
+	</p>
 <pre><span class="codetitle">e.g. VSCodeのフォーマッターに関する設定ファイルの構成 @settings.json</span><code>
 {
   "editor.defaultFormatter": <span class="literal">"vscjava.vscode-java-pack"</span>,
@@ -46,6 +50,12 @@
   "java.saveActions.organizeImports": <span class="literal">true</span>
 }
 </code></pre>
+	<p>
+		import文の定義順序は、デフォルトのままでEclipseとほぼ一緒っぽい？
+	</p>
+	<p>
+		defaultFormatterはjava-packでいいのか？みなさんVSCodeでJavaやるときはjava-pack？
+	</p>
 <!-- __content-end__ --></div></div>
 <div id="sidebar">
 	<ul>
